--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,6 +25,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor= eDP-1, highres@highrr, 0x0, 1
+monitor= HDMI-A-1, highres@highrr, -1920x0, 1
 
 
 ###################
@@ -201,7 +202,7 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
+    force_no_accel = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
@@ -211,7 +212,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -270,6 +271,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 bind = SUPER SHIFT, M, movecurrentworkspacetomonitor, +1
+#bind = SUPER SHIFT, left, movecurrentworkspacetomonitor, -1
+
 
 # Example special workspace (scratchpad)
 # bind = $mainMod, S, togglespecialworkspace, magic
